# HaloDE

./: CMakeLists.txt  Makefile  README.md  meson.build
assets/: halo.desktop
compositor/: main.c  render.c
configs/default/: compositor.conf
docs/architecture/: compositor.md  core_subsystems.md  overview.md  security_and_session.md  theming_and_ui.md
docs/developer-guide/: README.md
examples/: ipc_example.c  plugin_example.c
libs/libplugin/: halo_plugin.h
protocols/custom/: halo-shell-v1.xml
scripts/: halo-session
